Change background color and update About modal
Updated background colors and modified the About section.

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         .info-item {
             text-align: center;
             padding: 12px;
-            background: #f8f9fa;
+            background: #89dcff;
             border-radius: 8px;
         }
 
@@ -244,8 +244,8 @@
         }
 
         .level-btn:hover {
-            border-color: #667eea;
-            color: #84a6f0;
+            background: #5568d3;
+            color: white;
             transform: translateY(-3px);
         }
 
@@ -614,7 +614,7 @@
     <div class="navbar-brand">🧠 Memory Master</div>
     <div class="nav-buttons">
         <button class="nav-btn" onclick="openModal('helpModal')">Help❓</button>
-        <button class="nav-btn" onclick="openModal('aboutModal')">Infoℹ️</button>
+        <button class="nav-btn" onclick="openModal('aboutModal')">About Usℹ️</button>
         <!-- <button class="nav-btn" onclick="openModal('feedbackModal')">⭐</button> -->
         <button class="nav-btn" onclick="openModal('leaderboardModal')">Leader Board🏆</button>
         <button class="nav-btn" id="soundToggle" onclick="toggleSound()">🔊</button>
@@ -872,14 +872,17 @@
     <div class="modal-content">
         <h2 class="modal-title">About</h2>
         <p style="line-height: 1.6; color: #333;">
-            <strong>Memory Master v3.0</strong><br><br>
+            <strong>Memory Master v1.0</strong><br><br>
             Features:<br>
             ✓ 3 difficulty levels<br>
-            ✓ Password management<br>
+            <!-- ✓ Password management<br> -->
             ✓ Leaderboards<br>
             ✓ Mobile responsive<br>
             ✓ Sound effects<br><br>
-            Made with ❤️ by Your Name
+            Made with ❤️ by THE BOYS
+            For contact us:
+              Mukesh A- 9923019020@klu.ac.in
+              Sanjai K- 9923019033@klu.ac.in
         </p>
         <button class="btn btn-secondary" onclick="closeModal('aboutModal')">Close</button>
     </div>
