--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Master - Improved Version</title>
-    <link class="icon" rel="icon" href="brain.png" type="image/png" sizes="512x512">
+    <link class="icon" rel="icon" href="./brain.png" type="image/png" sizes="512x512">
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -214,7 +214,7 @@
 
         .info-label {
             font-size: 11px;
-            color: #999;
+            color: #2e2e2e;
             text-transform: uppercase;
             margin-bottom: 5px;
         }
@@ -878,11 +878,11 @@
             <!-- ✓ Password management<br> -->
             ✓ Leaderboards<br>
             ✓ Mobile responsive<br>
-            ✓ Sound effects<br><br>
-            Made with ❤️ by THE BOYS
-            For contact us:
-              Mukesh A- 9923019020@klu.ac.in
-              Sanjai K- 9923019033@klu.ac.in
+            ✓ Sound effects<br>
+            Made with ❤️ by THE BOYS<br>
+            For contact us:<br>
+              Mukesh A- 9923019020@klu.ac.in<br>
+              Sanjai K- 9923019033@klu.ac.in<br>
         </p>
         <button class="btn btn-secondary" onclick="closeModal('aboutModal')">Close</button>
     </div>
