--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Master - Improved Version</title>
-    <link class="icon" rel="icon" href="./brain.png" type="image/png" sizes="512x512">
+    <link rel="icon" href="./brain.png">
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -214,7 +214,7 @@
 
         .info-label {
             font-size: 11px;
-            color: #2e2e2e;
+            color: #161616;
             text-transform: uppercase;
             margin-bottom: 5px;
         }
@@ -873,16 +873,16 @@
         <h2 class="modal-title">About</h2>
         <p style="line-height: 1.6; color: #333;">
             <strong>Memory Master v1.0</strong><br><br>
-            Features:<br>
-            ✓ 3 difficulty levels<br>
+            Features: <br>
+            ✓ 3 difficulty levels <br>
             <!-- ✓ Password management<br> -->
-            ✓ Leaderboards<br>
-            ✓ Mobile responsive<br>
-            ✓ Sound effects<br>
-            Made with ❤️ by THE BOYS<br>
-            For contact us:<br>
-              Mukesh A- 9923019020@klu.ac.in<br>
-              Sanjai K- 9923019033@klu.ac.in<br>
+            ✓ Leaderboards <br>
+            ✓ Mobile responsive <br>
+            ✓ Sound effects <br>
+            Made with ❤️ by THE BOYS <br>
+            For contact us: <br>
+              Mukesh A- 9923019020@klu.ac.in <br>
+              Sanjai K- 9923019033@klu.ac.in <br>
         </p>
         <button class="btn btn-secondary" onclick="closeModal('aboutModal')">Close</button>
     </div>
