Comment out contact information in index.html
Commented out the contact information section.

--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@
             ✓ Mobile responsive <br>
             ✓ Sound effects <br>
             Made with ❤️ by THE BOYS <br>
-            For contact us: <br>
+            <!--For contact us: <br>
               Mukesh A- 9923019020@klu.ac.in <br>
               Sanjai K- 9923019033@klu.ac.in <br>
         </p>
