--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
 <body>
 
 <div class="navbar">
-    <div class="navbar-brand">🧠 Memory Master</div>
+    <div class="navbar-brand">🧠 Flip Card Memory Game</div>
     <div class="nav-buttons">
         <button class="nav-btn" onclick="openModal('helpModal')">Help❓</button>
         <button class="nav-btn" onclick="openModal('aboutModal')">About Usℹ️</button>
