--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
             ✓ Leaderboards <br>
             ✓ Mobile responsive <br>
             ✓ Sound effects <br>
-            Made with ❤️ by THE BOYS <br>
+            Made with ❤️ by KAVIYARASU V (2322J0031)<br>
             <!--For contact us: <br>
               Mukesh A- 9923019020@klu.ac.in <br>
               Sanjai K- 9923019033@klu.ac.in <br>
